Add photo gallery to subsection page
Copied the gallery from the single/project page and stuck it up a level,
since it would be useful to have a gallery of photos for subsections.

--- a/layouts/partials/pages/lists.html
+++ b/layouts/partials/pages/lists.html
@@ -23,6 +23,13 @@
     {{ end }}
 {{ end }}
 
+{{ $images_directory := .Params.images_directory | default "images" }}
+{{ $images_static := .Params.images_static | default "false" }}
+{{ $images_copyright := .Params.images_copyright }}
+{{ $images_params := .Params.images }}
+{{ partial "gallery.html" (dict "page" . "dir" $images_directory "static" $images_static "images_params" $images_params "images_copyright" $images_copyright) }}
+{{ partial "load-photoswipe.html" (dict "page" .) }}
+
 {{/* List posts (default value is true) */}}
 {{ if (or (not (isset .Params "showposts")) (.Params.showposts)) }}
     {{ if .Pages }}
